--- a/langs/en_US.json
+++ b/langs/en_US.json
@@ -47,7 +47,7 @@
   },
   "search-results": {
     "title": "Search Results",
-    "th-0": "Parent username",
+    "th-0": "Parent Username",
     "th-1": "Parent No",
     "th-2": "Pid",
     "th-3": "Kid",
